# MCP-DEV

./: .flake8  .gitattributes  .gitignore  .mcpbignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  APPLY_INTEGRATION_FIX.py  CLAUDE.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CRUD_OPERATIONS_COMPLETE.md  C__Users_bjorn.braet_Documents_PowerBI_MCP_Complete_Documentation.md  DEPENDENCY_ANALYSIS_FIXES.md  DMV_SYNTAX_FIX.md  DMV_TABLEID_FIX.md  ENHANCED_PBIP_IMPLEMENTATION.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_ROADMAP_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_COMPLETE_V2.3.md  HYBRID_ANALYSIS_IMPLEMENTATION_PLAN.md  HYBRID_ANALYSIS_IMPLEMENTATION_PLAN_COMPLETE.md  HYBRID_ANALYSIS_OPTIMIZATIONS.md  HYBRID_ANALYSIS_RESEARCH_FINDINGS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_ANALYSIS_UPDATED.md  INTEGRATION_COMPLETE.md  MCP-PowerBi-Finvision.sln  MCP_SERVER_COMPREHENSIVE_REVIEW.md  MCP_SERVER_IMPROVEMENTS_SUMMARY.md  MCP_SERVER_TOOL_IMPROVEMENT_PLAN.md  MODEL_COMPARISON_GUIDE.md  Microsoft_PowerBI_MCP_Integration_Plan.md  OPERATIONS_VERIFICATION.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZATION_SUMMARY.md  PBIP_ANALYZER_MISSING_FEATURES.md  PHASE1_IMPLEMENTATION_COMPLETE.md  (+48 more)
.claude/: AGENT_ANALYSIS.md  CODE_REVIEW_REPORT.md  ENHANCEMENTS_IMPLEMENTED.md  TASK_COMPLETION_PROTOCOL.md  settings.local.json
config/: bpa_rules_comprehensive.json  bpa_rules_default.json  default_config.json  local_config.sample.json
core/: agent_policy.py  bpa_analyzer.py  bpa_service.py  bulk_operations.py  cache_manager.py  calculation_group_manager.py  config_manager.py  connection_manager.py  connection_state.py  dax_advanced_validator.py  dax_injector.py  dax_parser.py  dax_validator.py  dependency_analyzer.py  documentation_builder.py  enhanced_error_handler.py  error_handler.py  input_validator.py  measure_manager_enhanced.py  model_comparison_orchestrator.py  model_diff_engine.py  model_diff_report.py  model_diff_report_v2.py  model_exporter.py  model_narrative.py  model_validator.py  multi_instance_manager.py  partition_manager.py  pbip_dependency_engine.py  pbip_enhanced_analyzer.py  pbip_html_generator.py  pbip_html_generator_jquery_backup.py  pbip_model_analyzer.py  pbip_project_scanner.py  pbip_report_analyzer.py  performance_analyzer.py  performance_analyzer_v2.py  performance_monitor.py  performance_optimizer.py  query_executor.py  (+11 more)
docs/: 013-hybrid-tools-enhancement-plan.md  AGENTIC_ROUTING_GUIDE.md  AGGREGATION_ANALYSIS_IMPLEMENTATION_PLAN.md  AI_MODEL_EXPORT.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  Claude_Guardrails_AutoUse.md  DEPLOYMENT_GUIDE.md  FAQ.md  FINAL_SOLUTION_SE_FE_TIMING.md  Guide.md  HTML_Mockup_Guardrails.md  IMPLEMENTATION_PLAN_REVISED.md  Scripts.md  (+26 more)
(+332 files in other folders)
